<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_measurement_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/edit_measurement"
        android:textAlignment="center"
        android:textColor="@color/black_effective"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <EditText
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/dialog_measurement_id"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:hint="id" />

            <EditText
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/dialog_measurement_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="name" />

            <EditText
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/dialog_measurement_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="sensor" />

            <EditText
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/dialog_measurement_quantity_kind"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:hint="quantity kind" />

            <EditText
                android:id="@+id/dialog_measurement_unit"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:hint="unit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:paddingStart="5dp"
                android:paddingTop="2dp"
                android:paddingEnd="5dp"
                android:paddingBottom="2dp"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/btn_dialog_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:paddingStart="5dp"
                android:paddingTop="2dp"
                android:paddingEnd="5dp"
                android:paddingBottom="2dp"
                android:text="@string/submit"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
