<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailSensorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/app_bar_height"
            android:background="@color/colorPrimary"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/nav_back_btn"
                style="@style/Button.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/transparent"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_arrow" />

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextStyle.Heading"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/sensor_registration"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_sensor_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="end"
                        android:text="Jun 12, 2018"
                        android:textAlignment="textEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_sensor_domain_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:fontFamily="@font/roboto_light"
                        android:text="Domain: " />

                    <TextView
                        android:id="@+id/detail_sensor_domain"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/app_google_play_store_link"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_sensor_owner_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:fontFamily="@font/roboto_light"
                        android:text="Owner: " />

                    <TextView
                        android:id="@+id/detail_sensor_owner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/app_google_play_store_link"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_weight="0.30"
                        android:id="@+id/btn_locate_on_map"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_curved_primary_color"
                        android:layout_margin="3dp"
                        android:text="show on map"
                        android:textColor="@color/white" />

                    <Button
                        android:layout_weight="0.30"
                        android:id="@+id/btn_undeploy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_curved_primary_color"
                        android:layout_margin="3dp"
                        android:text="undeploy"
                        android:textColor="@color/white" />

                    <Button
                        android:layout_weight="0.30"
                        android:id="@+id/btn_deploy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_curved_primary_color"
                        android:layout_margin="3dp"
                        android:text="deploy"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/sensor_measurements_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_regular"
            android:maxLines="1"
            android:text="Measurements"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/tv_no_measurements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/no_measurements_list_found"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/measurement_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:scrollbars="vertical"
                tools:listitem="@layout/card_measurement" />

        </RelativeLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>